--- a/index.html
+++ b/index.html
@@ -4,15 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="STEEL, FRAME, CONSTRUCCION, SECO, CASAS, REFACCIONES, FRAMING">
+    <meta name="description" content="Con el método Steel Framing nuestra misión es lograr construir en menor tiempo una vivienda confortable, cálida, y suntuosa de mayor calidad que una casa tradicional.">
     <title>Tiempo Construcciones</title>
     <link rel="icon" type="image/jpg" href="./imagenes/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./fuentes/32406_ROUGD___.ttf">
 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>hola
-        
-    </h1>
+    <header>
+        <div class="container text-center border">
+            <img src="./imagenes/portada.jpg" alt="Tiempo Construcciones" class="imgPortada img-fluid" width="1300" height="auto">
+                <h1>Tiempo Construcciones</h1>
+
+                <nav class="navbar navbar-expand-lg bg-light">
+                    <div class="container-fluid">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="#preguntas">Preguntas</a>
+                            <a class="nav-link" href="#">Servicios</a>
+                            <a class="nav-link" href="#">Contacto</a>
+                        </div>
+                    </div>
+                    </div>
+                </nav>
+        </div>
+    </header>
+
+    <section id="preguntas" class="container text-center">
+
+        <div class="row gap-5 preguntas">
+            
+        <div class="card mb-3" style="max-width: 950px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="./imagenes/placas.jpg" class="img-fluid rounded-start" alt="placas">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">¿Que es Steel Framing?</h5>
+                            <p class="card-text">Steel Framing es una nueva manera de construir.
+                                La estructura se compone de perfiles de acero galvanizado, sobre los que se aplica una placa cementicia como revestimiento exterior, y una placa de yeso como interior.
+                                En medio, se aplica lana de vidrio como aislante para el frío, el calor y el sonido, placa de madera para rigidizar la estructura y una barrera de vapor y otra de agua y viento.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mb-3" style="max-width: 950px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="./imagenes/rapidez.webp" class="img-fluid rounded-start" alt="rapidez">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">¿Es más rápido?</h5>
+                            <p class="card-text">Steel Framig te permite construir en menor tiempo que la construcción tradicional de ladrillos agilizando los tiempos de ejecución de obra (INCOSE) calcula que el Steel puede realizarse el 60% más rápido que la construcción tradicional.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mb-3" style="max-width: 950px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="./imagenes/costo2.webp" class="img-fluid rounded-start" alt="barato">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">¿Es más barato?</h5>
+                            <p class="card-text">Se reducen considerablemente en mano de obra, por el menor tiempo empleado en mano de obra y en materiales ej. La perfilaría puede adquirirse en la medida adecuada al proyecto, y demás materiales que pueden calcularse con exactitud.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
