--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             </div>
         </nav>
 
-        <div class="container text-center">
-            <img src="./imagenes/portada.jpg" alt="Tiempo Construcciones" class="imgPortada img-fluid" width="1300" height="auto">
+        <div class="container text-center encabezado">
+            <img src="./imagenes/portada.jpg" alt="Tiempo Construcciones" title="Tiempo Construcciones" class="imgPortada img-fluid" width="1300" height="auto">
                 <h1>Tiempo Construcciones</h1>
+                <p> <strong>Nuestra Misión:</strong> Lograr construir en menor tiempo una vivienda confortable, cálida, y suntuosa de mayor calidad que una casa tradicional.</p>
         </div>
     </header>
 
@@ -48,10 +49,10 @@
             
             <h2>Preguntas Frecuentes</h2>
 
-        <div class="card mb-3" style="max-width: 950px;">
+        <div class="card mb-3 border-0" style="max-width: 950px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="./imagenes/placas.jpg" class="img-fluid rounded-start" alt="placas">
+                    <img src="./imagenes/steel.jpg" class="img-fluid rounded-start" alt="placas">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -64,7 +65,7 @@
             </div>
         </div>
 
-        <div class="card mb-3" style="max-width: 950px;">
+        <div class="card mb-3 border-0" style="max-width: 950px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagenes/rapidez.webp" class="img-fluid rounded-start" alt="rapidez">
@@ -78,7 +79,7 @@
             </div>
         </div>
 
-        <div class="card mb-3" style="max-width: 950px;">
+        <div class="card mb-3 border-0" style="max-width: 950px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagenes/costo2.webp" class="img-fluid rounded-start" alt="barato">
@@ -104,7 +105,7 @@
 
                     <h3>Llave en Mano</h3>
 
-                        <img src="./imagenes/llaveenmano.jpg" alt="llave en mano" class="imgLlaveEnmano img-fluid" width="500" height="auto">
+                        <img src="./imagenes/llaveenmano.jpg" alt="llave en mano" title="Llave en mano" class="imgLlaveEnmano img-fluid" width="500" height="auto">
 
                             <h4>Que incluye llave en mano:</h4>
 
@@ -146,7 +147,7 @@
 
                 <div class="obraGris">
                     <h3>Obra Gris</h3>
-                        <img src="./imagenes/obragris.jpg" alt="obra gris" class="imgObragris img-fluid" width="500" height="auto">
+                        <img src="./imagenes/obragris.jpg" title="Obra Gris" alt="obra gris" class="imgObragris img-fluid" width="500" height="auto">
 
                         <p><em>Este tipo de construcción no incluye: Pisos, Aberturas, Pintura exterior, Pintura interior. Muebles de cocina, Mesada, Sanitarios, Grifería.</em></p>
 
@@ -174,10 +175,12 @@
 
 
     <footer id="contactar" class="container text-center">
+        <h2>Contactar</h2>
         <ul>
-            <li>Alberto Vigna <a href="https://wa.me/5493476641851" target="_blank"><img src="./imagenes/whatsapp.png" alt="whatsapp" class="imgRedes">03476 641851</a></li>
-            <li><a href="https://www.instagram.com/tiempoconstrucciones/" target="_blank"><img src="./imagenes/instagram.png" alt="instagram" class="imgRedes">/tiempoconstrucciones</a></li>
-            <li><a href="https://www.facebook.com/TiempoConstrucciones" target="_blank"><img src="./imagenes/facebook.png" alt="facebook" class="imgRedes">/TiempoConstrucciones</a></li>
+            <li>Alberto Vigna</li>
+            <li><a href="https://wa.me/5493476641851" target="_blank" title="Enviar Whatsapp"><img src="./imagenes/whatsapp.png" alt="whatsapp" class="imgRedes">03476 641851</a></li>
+            <li><a href="https://www.instagram.com/tiempoconstrucciones/" target="_blank" title="Instagram"><img src="./imagenes/instagram.png" alt="instagram" class="imgRedes">/tiempoconstrucciones</a></li>
+            <li><a href="https://www.facebook.com/TiempoConstrucciones" target="_blank" title="Facebook"><img src="./imagenes/facebook.png" alt="facebook" class="imgRedes">/TiempoConstrucciones</a></li>
         </ul>
     </footer>
 
