--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
+                    <a class="nav-link active" href="#encabezado">Inicio</a>
                     <a class="nav-link active" aria-current="page" href="#preguntas">Preguntas</a>
                     <a class="nav-link active" href="#servicios">Servicios</a>
                     <a class="nav-link active" href="#contactar">Contacto</a>
@@ -34,7 +35,7 @@
             </div>
         </nav>
 
-        <div class="container text-center encabezado">
+        <div class="container text-center" id="encabezado">
             <img src="./imagenes/portada.jpg" alt="Tiempo Construcciones" title="Tiempo Construcciones" class="imgPortada img-fluid" width="1300" height="auto">
                 <h1>Tiempo Construcciones</h1>
                 <p> <strong>Nuestra Misión:</strong> Lograr construir en menor tiempo una vivienda confortable, cálida, y suntuosa de mayor calidad que una casa tradicional.</p>
