--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <li><a href="https://wa.me/5493476641851" target="_blank" title="Enviar Whatsapp"><img src="./imagenes/whatsapp.png" alt="whatsapp" class="imgRedes">03476 641851</a></li>
             <li><a href="https://www.instagram.com/tiempoconstrucciones/" target="_blank" title="Instagram"><img src="./imagenes/instagram.png" alt="instagram" class="imgRedes">/tiempoconstrucciones</a></li>
             <li><a href="https://www.facebook.com/TiempoConstrucciones" target="_blank" title="Facebook"><img src="./imagenes/facebook.png" alt="facebook" class="imgRedes">/TiempoConstrucciones</a></li>
+            <li><img src="./imagenes/mapa.png" alt="San Lorenzo" title="San Lorenzo" class="imgRedes">San Lorenzo, Santa Fe, Argentina</li>
         </ul>
     </footer>
 
